<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInkersPowered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poweredby"
        android:textColor="@color/colorPrimary"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/inkerslogo" />

    <TextView
        android:id="@+id/tvInkersSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/inkersweb"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvInkersMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/inkersmail"
        android:layout_gravity="center"
        android:paddingBottom="30dp"/>

</LinearLayout>