<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.inkers.jcet.ErrorActivity">

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/icon_no_net"
        android:layout_gravity="center"
        android:layout_marginTop="180dp" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/no_net"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small" />

    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvRefresh"
            android:text="@string/refresh"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/tvExit"
            android:text="@string/exit"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

    </LinearLayout>

</LinearLayout>
